meegotouchhome (1.1.3~1) unstable; urgency=low

  * [UNRELEASED]

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Wed, 29 Jun 2011 13:28:14 +0300

meegotouchhome (1.1.2-1) unstable; urgency=low

  * Fixes: NB#269064 - Panning animation of Events/Switcher is different from other screens
  * Changes: Enabler to fix 255416
  * Changes: Make virtual removeLauncherButton in launcher

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Wed, 29 Jun 2011 13:25:43 +0300

meegotouchhome (1.1.1-1) unstable; urgency=low

  * Fixes: NB#264707 - [ JUNIPERQA-17432] Store client state is broken on launcher grid after canceling an update

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Mon, 13 Jun 2011 09:17:22 +0300

meegotouchhome (1.1.0-1) unstable; urgency=low

  * Fixes: NB#263961 - COREWEB: LauncherButtonProgressIndicatorView::drawContents at launcherbuttonprogressindicatorview.cpp:200

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Fri, 10 Jun 2011 09:46:33 +0300

meegotouchhome (1.0.1-2) unstable; urgency=low

  * Fixes: NB#262761 - Open applications are not displayed in recents
  * Fixes: 256634 - Closing an application in switcher zooms other switcher buttons bigger or smaller in given scenario
  * Fixes: 262895 - Viewport jumps when closing an application

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 07 Jun 2011 16:28:43 +0300

meegotouchhome (1.0.0-1) unstable; urgency=low

  * Changes: Enabler to allow fixing 257453
  * Fixes: NB#260232 - [TASK] The major version of MeeGo Touch Desktop packages should be 1

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 07 Jun 2011 14:57:12 +0300

meegotouchhome (0.32.0-1) unstable; urgency=low

  * Fixes: NB#220519 - Installation spinner missing from launcher items

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Fri, 3 Jun 2011 11:20:12 +0300

meegotouchhome (0.31.0-1) unstable; urgency=low

  * Fixes: NB#259372 - [TASK] Launcher should not show X buttons for applications that can't be removed