@@ -1,6 +1,7 @@
 meegotouchhome (1.1.3~1) unstable; urgency=low
 
   * [UNRELEASED]
+  * Fixes: NB#255976 - [TASK] Launcher icon disappearing should be animated
 
  -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Wed, 29 Jun 2011 13:28:14 +0300
 
